--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,3 @@
-{% extends 'base.html' %}
-
-{% block head %}<title>HTMX</title>{% endblock %} 
-
-{% block navbar %}Navbar{% endblock %}
-{% block message %}{% endblock %}
-
-{% block body %}
-    <button class="btn btn-primary">Submit</button>
+{% extends 'base.html' %} {% block head %}<title>HTMX</title>{% endblock %} {% block navbar %}{% endblock %} {% block message %}{% endblock %} {% block body %}
+<button class="btn btn-primary">Submit</button>
 {% endblock %}
