--- a/templates/base.html
+++ b/templates/base.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="shortcut icon" href="{{ url_for('static', filename='css/favicon.ico') }}" />
-        <link rel="stylesheet"    href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" />
-        <link rel="stylesheet"    href="{{ url_for('static', filename='css/main.css') }}" />
-        {% block head %}{% endblock %}
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='css/favicon.ico') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
+    <title>Title</title>
+    {% block head %} {% endblock head %}
+</head>
 
-    <body>
-        {% block navbar %}{% endblock %}
-
-        {% block message %}
-            {{ messages }}
-            {% with messages = get_flashed_messages(with_categories=true) %}
-                {% if messages %}
-                    <ul class="flashes">
-                        {% for category, message in messages %}
-                            <li class="{{ category }}">{{ message }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
-            {% endwith %}
-            
-        {% endblock %}
-            
-        <div class="container">{% block body %} {% endblock %}</div>
-    </body>
+<body>
+    <div class="container">
+        {% block body %} {% include "navbar.html" %} {% block message %} {{ messages }} {% with messages=get_flashed_messages(with_categories=true) %} {% if messages %}
+        <ul class="flashes">
+            {% for category, message in messages %}
+            <li class="{{ category }}">{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %} {% endwith %} {% endblock message %} {% endblock body %}
+    </div>
+</body>
+!
 </html>
