--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
-{% extends 'base.html' %} {% block head %}<title>HTMX</title>{% endblock %} {% block navbar %}{% endblock %} {% block message %}{% endblock %} {% block body %}
-<button class="btn btn-primary">Submit</button>
-{% endblock %}
+{% extends 'base.html' %}
+
+{% block title %}<title>HTMX</title>{% endblock title %}
+
+hello
