--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,7 +9,10 @@ body {
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    /*
     display: flex;
     justify-content: center;
     align-items: center;
+*/
+    color: red;
 }
