--- a/templates/base.html
+++ b/templates/base.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="{{ url_for('static', filename='css/favicon.ico') }}" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
-    <title>Default Title</title>
-    {% block style %} {% endblock style %}
+    <title>Base</title>
 </head>
 
 <body>
-    BODY
-    <div class="container">
-        {% block body %}
-        {% include "navbar.html" %}
+    {% include "navbar.html" %}
+    <div class="container mt-4">
+        {% block content %}
         {# block message %}
         {% with messages=get_flashed_messages() %}
         {% if messages %}
@@ -27,7 +27,7 @@
         {% endif %}
         {% endwith %}
         {% endblock message #}
-        {% endblock body %}
+        {% endblock content %}
     </div>
 </body>
 
