--- a/templates/500.html
+++ b/templates/500.html
@@ -1,4 +1,4 @@
 {% extends 'blank.html' %}
-{% block body %}
+{% block content %}
 <h1>Internal Server Error</h1>
-{% endblock %}
+{% endblock content %}
