--- a/templates/blank.html
+++ b/templates/blank.html
@@ -8,11 +8,11 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='css/favicon.ico') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
-    <title>title</title>
+    <title>Blank</title>
 </head>
 
 <body>
-    <div class="container">{% block body %} {% endblock %}</div>
+    <div class="container">{% block content %} <h1>BLANK</h1> {% endblock content %}</div>
 </body>
 
 </html>
