--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="{{ url_for('static', filename='css/favicon.ico') }}" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" />
+
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
     <title>Base</title>
 </head>
@@ -16,7 +17,7 @@
     {% include "navbar.html" %}
     <div class="container mt-4">
         {% block content %}
-        {# block message %}
+        {% block message %}
         {% with messages=get_flashed_messages() %}
         {% if messages %}
         <ul class="flashes">
@@ -26,9 +27,11 @@
         </ul>
         {% endif %}
         {% endwith %}
-        {% endblock message #}
+        {% endblock message %}
         {% endblock content %}
     </div>
+
+    <script src="{{ url_for('static', filename='js/test.js') }}"></script>
 </body>
 
 </html>
