--- a/templates/name.html
+++ b/templates/name.html
@@ -15,6 +15,8 @@
 
 {% if name %}
 <h1>Hello {{ name }}</h1>
+<img src="{{ url_for('static', filename='/img/nature.jpg') }}" width="600px" height="auto" alt="Nature" />
+<p id="demo">This is stuff...</p>
 {% else %}
 <h1>What is your name?</h1>
 <br />
